Spacing fix

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -256,6 +256,7 @@ main {
         justify-content: flex-start;
         order: 1;
         width: 50%;
+        padding-top: 1em;
     }
 
     .h-title-and-price h2{
